--- a/ซีรี่ย์กำลังออกอากาศ_หน้าที่_22.html
+++ b/ซีรี่ย์กำลังออกอากาศ_หน้าที่_22.html
@@ -243,7 +243,7 @@ $(document).ready(function(){
 
 
 	<!--div class="form-group"-->
-	<label for="form-password"><font color='white'> หน้าที่ ชื่อ :  </font><font color='yellow'> หน้าที่ [ ผู้เฒ่าพเนจร ™ ]</font></label>
+	<label for="form-password"><font color='white'> ชื่อ :  </font><font color='yellow'>[ ผู้เฒ่าพเนจร ™ ]</font></label>
 	<!--/div-->
 
 										
@@ -1062,7 +1062,7 @@ $(document).ready(function(){
 		<li><a href="https://udzaa2238.github.io/jew-jew/ซีรี่ย์กำลังออกอากาศ_หน้าที่_25.html">25</a></li>
 		<li><a href="https://udzaa2238.github.io/jew-jew/ซีรี่ย์กำลังออกอากาศ_หน้าที่_26.html">26</a></li>
 		<li><a href="https://udzaa2238.github.io/jew-jew/ซีรี่ย์กำลังออกอากาศ_หน้าที่_27.html">27</a></li>
-		<li><<a href="https://udzaa2238.github.io/jew-jew/ซีรี่ย์กำลังออกอากาศ_หน้าที่_28.html">28</a></li>
+		<li><a href="https://udzaa2238.github.io/jew-jew/ซีรี่ย์กำลังออกอากาศ_หน้าที่_28.html">28</a></li>
 		<li><a href="https://udzaa2238.github.io/jew-jew/ซีรี่ย์กำลังออกอากาศ_หน้าที่_29.html">29</a></li>
 		<li><a href="https://udzaa2238.github.io/jew-jew/ซีรี่ย์กำลังออกอากาศ_หน้าที่_30.html">30</a></li>
 		<li><a href="https://udzaa2238.github.io/jew-jew/ซีรี่ย์กำลังออกอากาศ_หน้าที่_31.html">หน้าต่อไป</a></li>
