--- a/ซีรี่ย์กำลังออกอากาศ_หน้าที่_32.html
+++ b/ซีรี่ย์กำลังออกอากาศ_หน้าที่_32.html
@@ -243,7 +243,7 @@ $(document).ready(function(){
 
 
 	<!--div class="form-group"-->
-	<label for="form-password"><font color='white'> หน้าที่ ชื่อ :  </font><font color='yellow'> หน้าที่ [ ผู้เฒ่าพเนจร ™ ]</font></label>
+	<label for="form-password"><font color='white'> ชื่อ :  </font><font color='yellow'>[ ผู้เฒ่าพเนจร ™ ]</font></label>
 	<!--/div-->
 
 										
@@ -1075,7 +1075,7 @@ $(document).ready(function(){
 		<li><a href="https://udzaa2238.github.io/jew-jew/ซีรี่ย์กำลังออกอากาศ_หน้าที่_35.html">35</a></li>
 		<li><a href="https://udzaa2238.github.io/jew-jew/ซีรี่ย์กำลังออกอากาศ_หน้าที่_36.html">36</a></li>
 		<li><a href="https://udzaa2238.github.io/jew-jew/ซีรี่ย์กำลังออกอากาศ_หน้าที่_37.html">37</a></li>
-		<li><<a href="https://udzaa2238.github.io/jew-jew/ซีรี่ย์กำลังออกอากาศ_หน้าที่_38.html">38</a></li>
+		<li><a href="https://udzaa2238.github.io/jew-jew/ซีรี่ย์กำลังออกอากาศ_หน้าที่_38.html">38</a></li>
 		<li><a href="https://udzaa2238.github.io/jew-jew/ซีรี่ย์กำลังออกอากาศ_หน้าที่_39.html">39</a></li>
 		<li><a href="https://udzaa2238.github.io/jew-jew/ซีรี่ย์กำลังออกอากาศ_หน้าที่_40.html">40</a></li>
 		<li><a href="https://udzaa2238.github.io/jew-jew/ซีรี่ย์กำลังออกอากาศ_หน้าที่_41.html">หน้าต่อไป</a></li>
