--- a/หนังไทย-1.html
+++ b/หนังไทย-1.html
@@ -776,17 +776,17 @@ $(document).ready(function(){
 <ul class="pagination">
 <li><a aria-label="Previous" href="go:main-serie"><span aria-hidden="true"><<  กลับหน้าหลัก </span></a></li>
 
-<li class="active"><a href="https://udzaa2238.github.io/jew-jew-320HD/ซีรี่ย์ใหม่320HD-1.html"><b>1</b></a></li>
-		<li><a href="https://udzaa2238.github.io/jew-jew-320HD/ซีรี่ย์ใหม่320HD-2.html">2</a></li>
-		<li><a href="https://udzaa2238.github.io/jew-jew-320HD/ซีรี่ย์ใหม่320HD-3.html">3</a></li>
-		<li><a href="https://udzaa2238.github.io/jew-jew-320HD/ซีรี่ย์ใหม่320HD-4.html">4</a></li>
-		<li><a href="https://udzaa2238.github.io/jew-jew-320HD/ซีรี่ย์ใหม่320HD-5.html">5</a></li>
-		<li><a href="https://udzaa2238.github.io/jew-jew-320HD/ซีรี่ย์ใหม่320HD-6.html">6</a></li>
-		<li><a href="https://udzaa2238.github.io/jew-jew-320HD/ซีรี่ย์ใหม่320HD-7.html">7</a></li>
-		<li><a href="https://udzaa2238.github.io/jew-jew-320HD/ซีรี่ย์ใหม่320HD-8.html">8</a></li>
-		<li><a href="https://udzaa2238.github.io/jew-jew-320HD/ซีรี่ย์ใหม่320HD-9.html">9</a></li>
-		<li><a href="https://udzaa2238.github.io/jew-jew-320HD/ซีรี่ย์ใหม่320HD-10.html">10</a></li>
-		<li><a href="https://udzaa2238.github.io/jew-jew-320HD/ซีรี่ย์ใหม่320HD-11.html">หน้าต่อไป</a></li>
+<li class="active"><a href="https://udzaa2238.github.io/jew-jew/หนังไทย-1.html"><b>1</b></a></li>
+		<li><a href="https://udzaa2238.github.io/jew-jew/หนังไทย-2.html">2</a></li>
+		<li><a href="https://udzaa2238.github.io/jew-jew/หนังไทย-3.html">3</a></li>
+		<li><a href="https://udzaa2238.github.io/jew-jew/หนังไทย-4.html">4</a></li>
+		<li><a href="https://udzaa2238.github.io/jew-jew/หนังไทย-5.html">5</a></li>
+		<li><a href="https://udzaa2238.github.io/jew-jew/หนังไทย-6.html">6</a></li>
+		<li><a href="https://udzaa2238.github.io/jew-jew/หนังไทย-7.html">7</a></li>
+		<li><a href="https://udzaa2238.github.io/jew-jew/หนังไทย-8.html">8</a></li>
+		<li><a href="https://udzaa2238.github.io/jew-jew/หนังไทย-9.html">9</a></li>
+		<li><a href="https://udzaa2238.github.io/jew-jew/หนังไทย-10.html">10</a></li>
+		<li><a href="https://udzaa2238.github.io/jew-jew/หนังไทย-11.html">หน้าต่อไป</a></li>
 
 
 </ul>
