--- a/หนังไทย-1.html
+++ b/หนังไทย-1.html
@@ -774,7 +774,7 @@ $(document).ready(function(){
 <div align="center" class="example">
 <nav>
 <ul class="pagination">
-<li><a aria-label="Previous" href="go:main-serie"><span aria-hidden="true"><<  กลับหน้าหลัก </span></a></li>
+<li><a aria-label="Previous" href="go:main-movie"><span aria-hidden="true"><<  กลับหน้าหลัก </span></a></li>
 
 <li class="active"><a href="https://udzaa2238.github.io/jew-jew/หนังไทย-1.html"><b>1</b></a></li>
 		<li><a href="https://udzaa2238.github.io/jew-jew/หนังไทย-2.html">2</a></li>
