--- a/หนังไทย-9.html
+++ b/หนังไทย-9.html
@@ -990,13 +990,13 @@ $(document).ready(function(){
 	</div>
 
 
-
+	   
 
 
 <div align="center" class="example">
 <nav>
 <ul class="pagination">
-<li><a aria-label="Previous" href="go:main-serie"><span aria-hidden="true"><<  กลับหน้าหลัก </span></a></li>
+<li><a aria-label="Previous" href="go:main-movie"><span aria-hidden="true"><<  กลับหน้าหลัก </span></a></li>
 
 		<li><a href="https://udzaa2238.github.io/jew-jew/หนังไทย-1.html">1</a></li>
 		<li><a href="https://udzaa2238.github.io/jew-jew/หนังไทย-2.html">2</a></li>
