--- a/เป็นต่อ-หกฉาก-video-js.html
+++ b/เป็นต่อ-หกฉาก-video-js.html
@@ -1,199 +1,109 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-  <meta charset="UTF-8">
-  <title>tv_all_inter_series1-group</title>
+  <meta charset="UTF-8" />
+  <title>JW Player + Playlist</title>
+  <script src="https://cdn.jwplayer.com/libraries/VXc5h4Tf.js"></script> <!-- ใช้ license key จริงแทน IDzF9Zmk -->
   <style>
-    body {
-      margin: 0;
-      display: flex;
-      height: 100vh;
-      font-family: sans-serif;
-      background-color: #000;
-    }
-    #menu {
-      width: 25%;
-      background: #6a1b9a;
-      color: white;
-      overflow-y: auto;
-      padding: 10px;
-      transition: transform 0.3s ease;
-    }
-    #menu.hidden {
-      transform: translateX(-100%);
-    }
-    #menu h3 {
-      text-align: center;
-      margin-top: 0;
-    }
-    .group {
-      margin-bottom: 10px;
-    }
-    .group h4 {
-      margin: 5px 0;
-      padding: 8px;
-      background: #7e57c2;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    .channel-list {
-      display: none;
-      padding-left: 10px;
-    }
-    .channel {
-      cursor: pointer;
-      margin: 6px 0;
-      padding: 8px;
-      background: #ce93d8;
-      border-radius: 5px;
-      display: flex;
-      align-items: center;
-      transition: 0.2s;
-    }
-    .channel:hover, .channel.active {
-      background: #f06292;
-      color: white;
-    }
-    .channel img {
-      width: 50px;
-      height: 50px;
-      object-fit: contain;
-      margin-right: 10px;
-    }
-    #player-container {
-      flex: 1;
-      background: black;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      position: relative;
-    }
-    #video {
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
-      background: black;
-    }
+    body { margin: 0; font-family: sans-serif; background: #000; color: #fff; display: flex; height: 100vh; }
+    #menu { width: 300px; background: #6a1b9a; overflow-y: auto; padding: 10px; }
+    .group h3 { margin: 0; padding: 8px; background: #7e57c2; border-radius: 4px; cursor: pointer; }
+    .item-list { display: none; padding-left: 10px; }
+    .item { display: flex; align-items: center; margin: 4px 0; padding: 6px; background: #9575cd; border-radius: 4px; cursor: pointer; }
+    .item img { width: 60px; height: 35px; object-fit: cover; margin-right: 8px; }
+    .item.active, .item:hover { background: #f06292; }
+    #player { flex: 1; position: relative; }
   </style>
 </head>
 <body>
-  <div id="menu">
-    <h3>📺 รายการช่อง</h3>
-    <div id="channel-list"></div>
-  </div>
-
-  <div id="player-container">
-    <video id="video" controls autoplay></video>
-  </div>
+  <div id="menu"><h2>📺 Playlist</h2><div id="playlist"></div></div>
+  <div id="player"></div>
 
   <script>
-    const playlistURL = "https://dl.dropbox.com/scl/fi/kt5gqj2n6775le6duerh4/.m3u?rlkey=rxs8qrjpo5oosrolui1wap1xn&dl=1";
-    let channels = [];
+    const jwKey = "eNFaXCjyURVoCCGiHp7HTQ3hDhE/AfL0g8VE1fRbL84="; // 🔐 JW Player License Key
+    const playlistURLs = ["https://dl.dropbox.com/scl/fi/kt5gqj2n6775le6duerh4/.m3u?rlkey=rxs8qrjpo5oosrolui1wap1xn&dl=1"];
+    let playerInstance;
 
-    async function loadM3U(url) {
-      const res = await fetch(url);
-      const text = await res.text();
-      const lines = text.split('\n');
-
-      let current = {};
-      const list = [];
-
-      for (let i = 0; i < lines.length; i++) {
-        const line = lines[i].trim();
-
-        if (line.startsWith("#EXTINF:")) {
-          const nameMatch = line.match(/,(.*)$/);
-          const logoMatch = line.match(/tvg-logo="(.*?)"/);
-          const groupMatch = line.match(/group-title="(.*?)"/);
-
-          current = {
-            title: nameMatch ? nameMatch[1] : "ไม่ทราบชื่อ",
-            logo: logoMatch ? logoMatch[1] : "",
-            group: groupMatch ? groupMatch[1] : "ไม่มีหมวดหมู่"
-          };
-        } else if (line && !line.startsWith("#")) {
-          current.url = line;
-          list.push({ ...current });
-        }
+    async function loadPlaylist() {
+      for (let url of playlistURLs) {
+        try {
+          const res = await fetch(url);
+          const text = await res.text();
+          if (url.endsWith(".json")) return JSON.parse(text);
+          const lines = text.split("\n");
+          let list = [], cur = {};
+          for (let line of lines) {
+            line = line.trim();
+            if (line.startsWith("#EXTINF")) {
+              cur = {
+                title: line.split(",").pop().trim(),
+                group: (line.match(/group-title="(.*?)"/) || ["",""])[1] || "ไม่มีหมวดหมู่",
+                image: (line.match(/tvg-logo="(.*?)"/) || ["",""])[1] || ""
+              };
+            } else if (line && !line.startsWith("#")) {
+              cur.file = line;
+              list.push({ ...cur });
+            }
+          }
+          return list;
+        } catch {}
       }
-
-      return list;
+      return [];
     }
 
-    function renderChannels() {
-      const container = document.getElementById("channel-list");
-      container.innerHTML = "";
-
-      const groups = [...new Set(channels.map(c => c.group))];
-
+    function renderMenu(list) {
+      const menu = document.getElementById("playlist");
+      menu.innerHTML = "";
+      const groups = [...new Set(list.map(x => x.group))];
       groups.forEach(group => {
-        const groupDiv = document.createElement("div");
-        groupDiv.className = "group";
-
-        const header = document.createElement("h4");
-        header.textContent = group;
-        header.onclick = () => {
-          listDiv.style.display = listDiv.style.display === "block" ? "none" : "block";
-        };
-
-        const listDiv = document.createElement("div");
-        listDiv.className = "channel-list";
-
-        channels
-          .filter(c => c.group === group)
-          .forEach((ch, index) => {
-            const div = document.createElement("div");
-            div.className = "channel";
-            div.innerHTML = `${ch.logo ? `<img src="${ch.logo}" alt="${ch.title}">` : ""}<span>${ch.title}</span>`;
-            div.onclick = () => playChannel(ch);
-            listDiv.appendChild(div);
-          });
-
-        groupDiv.appendChild(header);
-        groupDiv.appendChild(listDiv);
-        container.appendChild(groupDiv);
+        const gd = document.createElement("div"), hd = document.createElement("h3"), il = document.createElement("div");
+        gd.className = "group";
+        hd.textContent = group;
+        il.className = "item-list";
+        hd.onclick = () => il.style.display = il.style.display === "block" ? "none" : "block";
+        list.filter(x => x.group === group).forEach(item => {
+          const it = document.createElement("div");
+          it.className = "item";
+          it.innerHTML = item.image ? `<img src="${item.image}"><span>${item.title}</span>` : item.title;
+          it.onclick = () => {
+            document.querySelectorAll(".item").forEach(e => e.classList.remove("active"));
+            it.classList.add("active");
+            loadJWPlayer(item);
+          };
+          il.appendChild(it);
+        });
+        gd.append(hd, il); menu.appendChild(gd);
       });
     }
 
-    function playChannel(channel) {
-      document.querySelectorAll(".channel").forEach(el => el.classList.remove("active"));
-      const all = [...document.querySelectorAll(".channel")];
-      const found = all.find(el => el.textContent.trim() === channel.title.trim());
-      if (found) found.classList.add("active");
+    function loadJWPlayer(item) {
+      if (playerInstance) playerInstance.remove();
 
-      const video = document.getElementById("video");
-      video.src = channel.url;
-      video.play();
-      requestFullscreen(video);
+      playerInstance = jwplayer("player").setup({
+        file: item.file,
+        image: item.image || "",
+        title: item.title,
+        width: "100%",
+        height: "100%",
+        autostart: true,
+        tracks: [], // รองรับ subtitle ถ้ามี
+        cast: {},
+        playbackRateControls: true
+      });
     }
 
     async function init() {
-      channels = await loadM3U(playlistURL);
-      renderChannels();
-      if (channels.length > 0) playChannel(channels[0]);
+      const list = await loadPlaylist();
+      if (list.length === 0) return;
+      renderMenu(list);
+      const first = document.querySelector(".item");
+      if (first) {
+        first.click();
+        document.querySelector(".item-list").style.display = "block";
+      }
     }
 
-    function requestFullscreen(element) {
-      if (element.requestFullscreen) element.requestFullscreen();
-      else if (element.webkitRequestFullscreen) element.webkitRequestFullscreen();
-      else if (element.mozRequestFullScreen) element.mozRequestFullScreen();
-      else if (element.msRequestFullscreen) element.msRequestFullscreen();
-    }
-
-    document.addEventListener("DOMContentLoaded", () => {
-      const video = document.getElementById("video");
-      const menu = document.getElementById("menu");
-
-      video.addEventListener("click", () => {
-        menu.classList.toggle("hidden");
-      });
-
-      video.addEventListener("touchstart", () => {
-        menu.classList.toggle("hidden");
-      });
-
-      init();
-    });
+    document.addEventListener("DOMContentLoaded", init);
   </script>
 </body>
 </html>
